src/app/component/snapshots/jedit__app__component__workspace__test__preview_out_of_bound_test.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree─────────────────────┐┌Preview────────────────────────────────────────────┐"
"│  root                  ↑││"value"                                            │"
"│> --key                 ║││                                                   │"
"│  --array               █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        █││                                                   │"
"│                        ║││                                                   │"
"│                        ↓││                                                   │"
"└─────────────────────────┘└───────────────────────────────────────────────────┘"
