src/app/component/snapshots/jedit__app__component__workspace__test__render_append_after_into_array_test-2.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│  root                   ↑││  1 {                                             │"
"│  └─ web-app             ║││  2   "servlet-name": "cofaxEmail",               │"
"│     ├─ servlet          ║││  3   "servlet-class": "org.cofax.cds.EmailServl  │"
"│     │  ├─ 0             ║││  4   "init-param": {                             │"
"│     │  ├─ 1             █││  5     "mailHost": "mail1",                      │"
"│>    │  ├─ 2             █││  6     "mailHostOverride": "mail2"               │"
"│     │  ├─ 3             █││  7   }                                           │"
"│     │  ├─ 4             █││  8 }                                             │"
"│     │  └─ 5             █││                                                  │"
"│     ├─ servlet-mapping  █││                                                  │"
"│     └─ taglib           █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         ║││                                                  │"
"│                         ║││                                                  │"
"│                         ║││                                                  │"
"│                         ↓││←███████████████████████████████████████████════→ │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
