src/app/component/snapshots/jedit__app__component__workspace__test__render_append_after_into_array_test-3.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│  root                   ↑││  1 {                                             │"
"│  └─ web-app             ║││  2   "cofaxCDS": "/",                            │"
"│     ├─ servlet          ║││  3   "cofaxEmail": "/cofaxutil/aemail/*",        │"
"│     │  ├─ 0             ║││  4   "cofaxAdmin": "/admin/*",                   │"
"│     │  ├─ 1             ║││  5   "fileServlet": "/static/*",                 │"
"│     │  ├─ 2             ║││  6   "cofaxTools": "/tools/*"                    │"
"│     │  ├─ 3             █││  7 }                                             │"
"│     │  ├─ 4             █││                                                  │"
"│     │  └─ 5             █││                                                  │"
"│>    ├─ servlet-mapping  █││                                                  │"
"│     └─ taglib           █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         ║││                                                  │"
"│                         ↓││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
