src/app/component/snapshots/jedit__app__component__workspace__test__render_append_after_into_array_test.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│  root                   ↑││  1 null                                          │"
"│  └─ web-app             ║││                                                  │"
"│     ├─ servlet          ║││                                                  │"
"│     │  ├─ 0             █││                                                  │"
"│>    │  ├─ 1             █││                                                  │"
"│     │  ├─ 2             █││                                                  │"
"│     │  ├─ 3             █││                                                  │"
"│     │  ├─ 4             █││                                                  │"
"│     │  └─ 5             █││                                                  │"
"│     ├─ servlet-mapping  █││                                                  │"
"│     └─ taglib           █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         ║││                                                  │"
"│                         ║││                                                  │"
"│                         ║││                                                  │"
"│                         ↓││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
