src/app/component/snapshots/jedit__app__component__workspace__test__render_append_after_into_object_key_exists_test-3.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│  root                   ↑││  1 null                                          │"
"│  └─ web-app             ║││                                                  │"
"│     ├─ servlet          ║││                                                  │"
"│>    ├─ taglib2          █││                                                  │"
"│     ├─ servlet-mapping  █││                                                  │"
"│     └─ taglib           █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         █││                                                  │"
"│                         ║││                                                  │"
"│                         ↓││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
