src/app/component/snapshots/jedit__app__component__workspace__test__render_append_after_into_object_test-2.snap
---
source: src/app/component/workspace.rs
expression: "stateful_render_to_string(&worktree, &mut state)"
---
"┌Tree──────────────────────┐┌Preview───────────────────────────────────────────┐"
"│  root                   ↑││  1 [                                            ↑│"
"│  └─ web-app             ║││  2   {                                          █│"
"│>    ├─ servlet          █││  3     "servlet-name": "cofaxCDS",              █│"
"│     ├─ servlet-mapping  █││  4     "servlet-class": "org.cofax.cds.CDSServl █│"
"│     └─ taglib           █││  5     "init-param": {                          ║│"
"│                         █││  6       "configGlossary:installationAt": "Phil ║│"
"│                         █││  7       "configGlossary:adminEmail": "ksm@pobo ║│"
"│                         █││  8       "configGlossary:poweredBy": "Cofax",   ║│"
"│                         █││  9       "configGlossary:poweredByIcon": "/imag ║│"
"│                         █││ 10       "configGlossary:staticPath": "/content ║│"
"│                         █││ 11       "templateProcessorClass": "org.cofax.W ║│"
"│                         █││ 12       "templateLoaderClass": "org.cofax.File ║│"
"│                         █││ 13       "templatePath": "templates",           ║│"
"│                         █││ 14       "templateOverridePath": "",            ║│"
"│                         █││ 15       "defaultListTemplate": "listTemplate.h ║│"
"│                         █││ 16       "defaultFileTemplate": "articleTemplat ║│"
"│                         ║││                                                 ↓│"
"│                         ↓││←██████████████████████████═════════════════════→ │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
